<resources>
    <string name="app_name">PillAppSencilla</string>
    <string name="titulo">PillApp</string>
    <string name="fecha">12/12/2024</string>
    <string name="hora">18:30</string>
    <string name="btnAddPasti">Añadir pastilla</string>
    <string name="txtElegirFecha">Introduce la fecha: </string>
    <string name="titleAniadirPasti">Añadir pastilla</string>
    <string name="txtFechaAddPasti">Fecha:</string>
    <string name="txtHoraAddPasti">Hora:</string>
    <string name="txtNombreAddPasti">"Nombre:"</string>
    <string name="hintFecha">Pulse para añadir fecha</string>
    <string name="hintHora">Pulse para añadir hora</string>
    <string name="tvFechaMostrar">00/00/0000</string>
    <string name="tvHoraMostrar">00:00</string>
    <string name="hintNombre">Añadir nombre</string>
</resources>