<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/purple_marmol"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.3"
        app:cardBackgroundColor="@color/cardColors"
        app:cardCornerRadius="16dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textStyle="bold"
                android:textColor="@color/txtColorOscuro"
                android:fontFamily="@font/font_sour_gummy"
                android:textSize="20sp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_weight="2.3"
        app:cardBackgroundColor="@color/calendarColor"
        app:cardCornerRadius="16dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">
            <CalendarView
                android:id="@+id/cvCalendar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:focusable="false" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1.5"
        app:cardBackgroundColor="@color/cardColors"
        app:cardCornerRadius="16dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tvFechaMostrarPasti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:text="@string/tvFechaMostrar"
                android:textSize="30sp"
                android:textColor="@color/txtColorOscuro"
                android:fontFamily="@font/font_sour_gummy"/>

            <TextView
                android:id="@+id/tvHoraMostrarPasti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|top"
                android:text="@string/tvHoraMostrar"
                android:textColor="@color/txtColorOscuro"
                android:textSize="30sp"
                android:fontFamily="@font/font_sour_gummy"/>

            <CheckBox
                android:id="@+id/cbPastillaDiaria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:textColor="@color/txtColorOscuro"
                android:fontFamily="@font/font_sour_gummy"
                android:textSize="20sp"/>
        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/crdCheckBox"
        android:layout_width="380dp"
        android:layout_height="0dp"
        android:layout_weight="1.7"
        app:cardBackgroundColor="@color/cardColors"
        app:cardCornerRadius="16dp"
        android:layout_marginBottom="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginStart="20dp">
            <TextView
                android:id="@+id/tvTituloAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleAniadirPasti"
                android:fontFamily="@font/font_sour_gummy"
                android:textSize="30sp"
                android:textColor="@color/txtColorOscuro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/tvFechaAddPasti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtFechaAddPasti"
                android:textColor="@color/txtColorOscuro"
                android:fontFamily="@font/font_sour_gummy"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/tvTituloAdd"
                app:layout_constraintStart_toStartOf="parent"
                />
            <EditText
                android:id="@+id/etFecha"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:hint="@string/hintFecha"
                android:fontFamily="@font/font_sour_gummy"
                android:textColor="@color/txtColorOscuro"
                android:focusable="false"
                android:clickable="false"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toEndOf="@id/tvNombreAddPasti"
                app:layout_constraintTop_toBottomOf="@id/tvTituloAdd"/>
            <TextView
                android:id="@+id/tvHoraAddPasti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtHoraAddPasti"
                android:fontFamily="@font/font_sour_gummy"
                android:textColor="@color/txtColorOscuro"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/tvFechaAddPasti"
                app:layout_constraintStart_toStartOf="parent"/>
            <EditText
                android:id="@+id/etHora"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:hint="@string/hintHora"
                android:fontFamily="@font/font_sour_gummy"
                android:textColor="@color/txtColorOscuro"
                android:focusable="false"
                android:clickable="false"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toEndOf="@id/tvNombreAddPasti"
                app:layout_constraintTop_toBottomOf="@id/etFecha"/>

            <TextView
                android:id="@+id/tvNombreAddPasti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtNombreAddPasti"
                android:fontFamily="@font/font_sour_gummy"
                android:textColor="@color/txtColorOscuro"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/tvHoraAddPasti"
                app:layout_constraintStart_toStartOf="parent"/>
            <EditText
                android:id="@+id/etNombre"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:hint="@string/hintNombre"
                android:fontFamily="@font/font_sour_gummy"
                android:textColor="@color/txtColorOscuro"
                android:inputType="text"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toEndOf="@id/tvNombreAddPasti"
                app:layout_constraintTop_toBottomOf="@id/etHora"/>
            <Button
                android:id="@+id/btnAddPastilla"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/btnAddPasti"
                android:textColor="@color/txtColorClaro"
                android:backgroundTint="@color/btnColor"
                android:layout_marginBottom="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>